--- a/home.html
+++ b/home.html
@@ -27,10 +27,10 @@
 			<div class="collapse navbar-collapse" id="nav1">
 				<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 					<li class="nav-item active">
-						<a class="nav-link" href="Index.php">Página Inicial<span class="sr-only"></span></a>
+						<a class="nav-link" href="index.php">Página Inicial<span class="sr-only"></span></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="Sobre.php">Sobre</a>
+						<a class="nav-link" href="sobre.php">Sobre</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="TrabalheConosco.php">Trabalhe conosco</a>
