--- a/agendamento.html
+++ b/agendamento.html
@@ -31,13 +31,13 @@
             <div class="collapse navbar-collapse" id="nav1">
              <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
               <li class="nav-item active">
-               <a class="nav-link" href="Index.html">Página Inicial<span class="sr-only"></span></a>
-              </li>
-              <li class="nav-item">
-               <a class="nav-link" href="Sobre.html">Sobre</a>
-              </li>
-              <li class="nav-item">
-               <a class="nav-link" href="TrabalheConosco.html">Trabalhe conosco</a>
+               <a class="nav-link" href="index.php">Página Inicial<span class="sr-only"></span></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="sobre.php">Sobre</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="TrabalheConosco.php">Trabalhe conosco</a>
               </li>
 
 
@@ -53,9 +53,9 @@
 
                    
                     <ul class="dropdown-menu" style="background-color: #D378D9; "role="menu">
-                      <li><a class="dropdown-item" href="cabelos.html">Cabelos</a></li>
-                      <li><a class="dropdown-item" href="unhas.html">Unhas</a></li>
-                      <li><a class="dropdown-item" href="depilacao.html">Depilação</a></li>
+                <li><a class="dropdown-item" href="cabelos.php">Cabelos</a></li>
+                <li><a class="dropdown-item" href="unhas.php">Unhas</a></li>
+                <li><a class="dropdown-item" href="depilacao.php">Depilação</a></li>
                       <li class="divider"></li>
                     </ul>
                   </div>
