--- a/sobre.html
+++ b/sobre.html
@@ -24,7 +24,7 @@
         <header>
 
         <nav class="navbar navbar-light  navbar-expand-lg" style="background-color: #DEBBD6;">
-          <a class="navbar-brand" href="Index.html"><img src="img/jaila.png"></a>
+          <a class="navbar-brand" href="Index.html"><img src="img/sobre.png"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav1" aria-controls="#nav1" aria-expanded="false" aria-label="Alterna navegação">
             <span class="navbar-toggler-icon"></span>
             </button>
