--- a/home.html
+++ b/home.html
@@ -53,12 +53,12 @@
 					</li>
 				</ul>
 			</div>
-			<a href="Login.html"><button type="button" class="btn btn-outline" style="background-color: #573159; color:#F9CB3E;">Entrar</button></a>
+			<a href="login.html"><button type="button" class="btn btn-outline" style="background-color: #573159; color:#F9CB3E;">Entrar</button></a>
 			<!--icones na parte superios direito-->
 			<!--icone do login ou entrada de cadastramento-->
 			<div class="mt-2 ml-2 mx-sm-2">
 
-				<a href="Cadastro.html"><svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-person-circle" fill="#573159" xmlns="http://www.w3.org/2000/svg">
+				<a href="cadastro.html"><svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-person-circle" fill="#573159" xmlns="http://www.w3.org/2000/svg">
 					<path d="M13.468 12.37C12.758 11.226 11.195 10 8 10s-4.757 1.225-5.468 2.37A6.987 6.987 0 0 0 8 15a6.987 6.987 0 0 0 5.468-2.63z"/>
 					<path fill-rule="evenodd" d="M8 9a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
 					<path fill-rule="evenodd" d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1zM0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8z"/>
