--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
             <form action="login.php" method="post">
              <div class="form-group mt-2 mx-sm-3 mb-2">
               <label for="staticEmail2" class="sr-only"  >Login</label>
-              <input type="text"  class="form-control" name='login' id="staticEmail2" value="Login" name="nome">
+              <input type="text"  class="form-control" name='email' id="staticEmail2" value="Login" placeholder="Email">
              </div>
              <div class="form-group mt-2 mx-sm-3 mb-2">
               <label for="inputPassword2" class="sr-only">Senha</label>
